# dubins

./: .gitattributes  CMakeLists.txt  dubins.pc.in  install_manifest.txt  license.txt
config/: dubins_params (copy).xml  dubins_params.xml
include/dubins/: dubinscar.h
matlab/: dubins_const.m  dubins_path.m  dubins_path_ex.m  dubins_results.m  plot_dubins.m  plot_turn_in_place.m
src/: dubinscar.cpp  dubinstest.cpp
